--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,10 @@
   }
 
   .input {
-    @apply sm:flex-1 bg-transparent max-sm:w-full text-base leading-normal text-slate-gray pl-5 max-sm:p-2 outline-none sm:border-none border max-sm:border-slate-gray max-sm:rounded-full my-2;
+    @apply sm:flex-1 bg-transparent max-sm:w-full text-base leading-normal text-slate-gray pl-1 max-sm:p-2 outline-none border-none border max-sm:border-slate-gray max-sm:rounded-full my-2;
+  }
+  .label {
+    @apply  bg-gray-600 w-24 text-white font-bold pl-3 pt-1.5 rounded-l-full;
   }
 }
 
